<resources>
    <!-- General -->
    <string name="app_name" translatable="false">Go.K</string>
    <string name="content_description">Content description</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">Unknown error</string>
    <string name="try_again">Try again</string>

    <!-- DescriptionDialog -->
    <string name="neutral_button_dialog">OK</string>

    <!-- Main -->
    <string name="greeting">Hi, %s</string>
    <string name="title_session_two_digio">digio</string>
    <string name="title_session_two_cash">Cash</string>
    <string name="title_session_three">Products</string>
</resources>
